# vaibes_backend

./: .env.sample  .gitignore  README.md  aiml_music_generator.py  app.py  milvus_create.py  music_generator_complete.py  pump_portal.py  pyproject.toml  test.py
modules/: veo3.py
modules/music/: generator.py
modules/video/: __init__.py  generator.py
templates/: index.html
