[project]
name = "vaibes-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "omatsuman69",email = "yoshikim1467@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sunoai (>=1.0.7,<2.0.0)",
    "pymilvus (>=2.5.5,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "fugashi (>=1.4.0,<2.0.0)",
    "ipadic (>=1.0.0,<2.0.0)",
    "unidic-lite (>=1.0.8,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
